# oneAlgorithmPerDay

./: README.md
project/: CMakeLists.txt  functionlist.txt  main.cpp
project/AddFromOneToN/: AddFromOneToN.h  UseAbstractFunctionToAdd.cpp  UseAbstractFunctionToAdd.h  UseFunctionPointerToAdd.cpp  UseFunctionPointerToAdd.h  UseGeneraterFunctionToAdd.cpp  UseGeneraterFunctionToAdd.h
project/CountOneInBinary/: CountOnInBinary.cpp  CountOnInBinary.h
